// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OrderLedger Component OrderLedger should render correctly 1`] = `
<Fragment>
  <Styled(Grid)
    className=" elem-mb-MED"
    data-locator="orderLedgerBox"
  >
    <Styled(Row)
      className="items-total rowMargin"
      data-locator="orderLedgerItemLbl"
    >
      <Styled(Col)
        colSize={
          Object {
            "large": 6,
            "medium": 4,
            "small": 3,
          }
        }
      >
        <Styled(BodyCopy)
          bodySize="one"
          className={null}
          color="primary"
          component="p"
          dataLocator="orderLedgerCount"
          fontFamily="secondary"
          fontSize="fs13"
          fontWeight="semibold"
          letterSpacing="normal"
          lineHeight="normal"
          link={null}
          textAlign="left"
        >
          undefined (1):
        </Styled(BodyCopy)>
      </Styled(Col)>
      <Styled(Col)
        colSize={
          Object {
            "large": 6,
            "medium": 4,
            "small": 3,
          }
        }
      >
        <Styled(BodyCopy)
          bodySize="one"
          className={null}
          color="primary"
          component="p"
          fontFamily="secondary"
          fontSize="fs13"
          fontWeight="semibold"
          letterSpacing="normal"
          lineHeight="normal"
          link={null}
          textAlign="right"
        >
          0.00
        </Styled(BodyCopy)>
      </Styled(Col)>
    </Styled(Row)>
    <Styled(Row)
      className="tax-total rowMargin"
      data-locator="orderLedgerTaxLbl"
    >
      <Styled(Col)
        colSize={
          Object {
            "large": 6,
            "medium": 4,
            "small": 3,
          }
        }
      >
        <Styled(BodyCopy)
          bodySize="one"
          className={null}
          color="primary"
          component="p"
          fontFamily="secondary"
          fontSize="fs13"
          fontWeight="semibold"
          letterSpacing="normal"
          lineHeight="normal"
          link={null}
          tag="span"
          textAlign="left"
        >
          undefined:
        </Styled(BodyCopy)>
      </Styled(Col)>
      <Styled(Col)
        colSize={
          Object {
            "large": 6,
            "medium": 4,
            "small": 3,
          }
        }
      >
        <Styled(BodyCopy)
          bodySize="one"
          className={null}
          color="primary"
          component="p"
          fontFamily="secondary"
          fontSize="fs13"
          fontWeight="semibold"
          letterSpacing="normal"
          lineHeight="normal"
          link={null}
          textAlign="right"
        >
          0.00
        </Styled(BodyCopy)>
      </Styled(Col)>
    </Styled(Row)>
    <Styled(Row)
      className="balance-total rowMargin"
      data-locator="orderLedgerBalanceTotalLbl"
    >
      <Styled(Col)
        colSize={
          Object {
            "large": 6,
            "medium": 4,
            "small": 3,
          }
        }
      >
        <Styled(BodyCopy)
          bodySize="one"
          className={null}
          color="primary"
          component="p"
          fontFamily="secondary"
          fontSize="fs16"
          fontWeight="extrabold"
          letterSpacing="normal"
          lineHeight="normal"
          link={null}
          tag="span"
          textAlign="left"
        >
          undefined:
        </Styled(BodyCopy)>
      </Styled(Col)>
      <Styled(Col)
        colSize={
          Object {
            "large": 6,
            "medium": 4,
            "small": 3,
          }
        }
      >
        <Styled(BodyCopy)
          bodySize="one"
          className={null}
          color="primary"
          component="p"
          fontFamily="secondary"
          fontSize="fs16"
          fontWeight="extrabold"
          letterSpacing="normal"
          lineHeight="normal"
          link={null}
          tag="span"
          textAlign="right"
        >
          0.00
        </Styled(BodyCopy)>
      </Styled(Col)>
    </Styled(Row)>
  </Styled(Grid)>
  <Measure
    name="render_cart_total"
  />
</Fragment>
`;

exports[`OrderLedger Component OrderLedger should render correctly 2`] = `
<Fragment>
  <Styled(Grid)
    className=" elem-mb-MED"
    data-locator="orderLedgerBox"
  >
    <Styled(Row)
      className="items-total rowMargin"
      data-locator="orderLedgerItemLbl"
    >
      <Styled(Col)
        colSize={
          Object {
            "large": 6,
            "medium": 4,
            "small": 3,
          }
        }
      >
        <Styled(BodyCopy)
          bodySize="one"
          className={null}
          color="primary"
          component="p"
          dataLocator="orderLedgerCount"
          fontFamily="secondary"
          fontSize="fs13"
          fontWeight="semibold"
          letterSpacing="normal"
          lineHeight="normal"
          link={null}
          textAlign="left"
        >
          undefined (1):
        </Styled(BodyCopy)>
      </Styled(Col)>
      <Styled(Col)
        colSize={
          Object {
            "large": 6,
            "medium": 4,
            "small": 3,
          }
        }
      >
        <Styled(BodyCopy)
          bodySize="one"
          className={null}
          color="primary"
          component="p"
          fontFamily="secondary"
          fontSize="fs13"
          fontWeight="semibold"
          letterSpacing="normal"
          lineHeight="normal"
          link={null}
          textAlign="right"
        >
          1.00
        </Styled(BodyCopy)>
      </Styled(Col)>
    </Styled(Row)>
    <Styled(Row)
      className="coupons-total rowMargin"
      data-locator="orderLedgerCouponsLbl"
    >
      <Styled(Col)
        colSize={
          Object {
            "large": 6,
            "medium": 4,
            "small": 3,
          }
        }
      >
        <Styled(BodyCopy)
          bodySize="one"
          className={null}
          color="primary"
          component="p"
          fontFamily="secondary"
          fontSize="fs13"
          fontWeight="semibold"
          letterSpacing="normal"
          lineHeight="normal"
          link={null}
          textAlign="left"
        >
          undefined:
        </Styled(BodyCopy)>
      </Styled(Col)>
      <Styled(Col)
        colSize={
          Object {
            "large": 6,
            "medium": 4,
            "small": 3,
          }
        }
      >
        <Styled(BodyCopy)
          bodySize="one"
          className={null}
          color="primary"
          component="p"
          fontFamily="secondary"
          fontSize="fs13"
          fontWeight="semibold"
          letterSpacing="normal"
          lineHeight="normal"
          link={null}
          textAlign="right"
        >
          -1.00
        </Styled(BodyCopy)>
      </Styled(Col)>
    </Styled(Row)>
    <Styled(Row)
      className="promotions-total rowMargin"
      data-locator="orderLedgerPromotionLbl"
    >
      <Styled(Col)
        colSize={
          Object {
            "large": 6,
            "medium": 4,
            "small": 3,
          }
        }
      >
        <Styled(BodyCopy)
          bodySize="one"
          className={null}
          color="primary"
          component="p"
          fontFamily="secondary"
          fontSize="fs13"
          fontWeight="semibold"
          letterSpacing="normal"
          lineHeight="normal"
          link={null}
          textAlign="left"
        >
          undefined
        </Styled(BodyCopy)>
      </Styled(Col)>
      <Styled(Col)
        colSize={
          Object {
            "large": 6,
            "medium": 4,
            "small": 3,
          }
        }
      >
        <Styled(BodyCopy)
          bodySize="one"
          className={null}
          color="primary"
          component="p"
          fontFamily="secondary"
          fontSize="fs13"
          fontWeight="semibold"
          letterSpacing="normal"
          lineHeight="normal"
          link={null}
          textAlign="right"
        >
          -1.00
        </Styled(BodyCopy)>
      </Styled(Col)>
    </Styled(Row)>
    <Styled(Row)
      className="shipping-total rowMargin"
      data-locator="orderLedgerShippingLbl"
    >
      <Styled(Col)
        colSize={
          Object {
            "large": 6,
            "medium": 4,
            "small": 3,
          }
        }
      >
        <Styled(BodyCopy)
          bodySize="one"
          className={null}
          color="primary"
          component="p"
          fontFamily="secondary"
          fontSize="fs13"
          fontWeight="semibold"
          letterSpacing="normal"
          lineHeight="normal"
          link={null}
          textAlign="left"
        >
          undefined:
        </Styled(BodyCopy)>
      </Styled(Col)>
      <Styled(Col)
        colSize={
          Object {
            "large": 6,
            "medium": 4,
            "small": 3,
          }
        }
      >
        <Styled(BodyCopy)
          bodySize="one"
          className={null}
          color="primary"
          component="p"
          fontFamily="secondary"
          fontSize="fs13"
          fontWeight="semibold"
          letterSpacing="normal"
          lineHeight="normal"
          link={null}
          textAlign="right"
        />
      </Styled(Col)>
    </Styled(Row)>
    <Styled(Row)
      className="tax-total rowMargin"
      data-locator="orderLedgerTaxLbl"
    >
      <Styled(Col)
        colSize={
          Object {
            "large": 6,
            "medium": 4,
            "small": 3,
          }
        }
      >
        <Styled(BodyCopy)
          bodySize="one"
          className={null}
          color="primary"
          component="p"
          fontFamily="secondary"
          fontSize="fs13"
          fontWeight="semibold"
          letterSpacing="normal"
          lineHeight="normal"
          link={null}
          tag="span"
          textAlign="left"
        >
          undefined:
        </Styled(BodyCopy)>
      </Styled(Col)>
      <Styled(Col)
        colSize={
          Object {
            "large": 6,
            "medium": 4,
            "small": 3,
          }
        }
      >
        <Styled(BodyCopy)
          bodySize="one"
          className={null}
          color="primary"
          component="p"
          fontFamily="secondary"
          fontSize="fs13"
          fontWeight="semibold"
          letterSpacing="normal"
          lineHeight="normal"
          link={null}
          textAlign="right"
        >
          1.00
        </Styled(BodyCopy)>
      </Styled(Col)>
    </Styled(Row)>
    <Styled(Row)
      className="estimated-total rowMargin"
      data-locator="orderLedgerTotalLbl"
    >
      <Styled(Col)
        colSize={
          Object {
            "large": 6,
            "medium": 4,
            "small": 3,
          }
        }
      >
        <Styled(BodyCopy)
          bodySize="one"
          className={null}
          color="primary"
          component="p"
          fontFamily="secondary"
          fontSize="fs13"
          fontWeight="semibold"
          letterSpacing="normal"
          lineHeight="normal"
          link={null}
          textAlign="left"
        >
          undefined:
        </Styled(BodyCopy)>
      </Styled(Col)>
      <Styled(Col)
        colSize={
          Object {
            "large": 6,
            "medium": 4,
            "small": 3,
          }
        }
      >
        <Styled(BodyCopy)
          bodySize="one"
          className={null}
          color="primary"
          component="p"
          fontFamily="secondary"
          fontSize="fs13"
          fontWeight="semibold"
          letterSpacing="normal"
          lineHeight="normal"
          link={null}
          textAlign="right"
        >
          1.00
        </Styled(BodyCopy)>
      </Styled(Col)>
    </Styled(Row)>
    <Styled(Row)
      className="giftCard-total rowMargin"
      data-locator="orderLedgerGiftCardLbl"
    >
      <Styled(Col)
        colSize={
          Object {
            "large": 6,
            "medium": 4,
            "small": 3,
          }
        }
      >
        <Styled(BodyCopy)
          bodySize="one"
          className={null}
          color="primary"
          component="p"
          fontFamily="secondary"
          fontSize="fs13"
          fontWeight="semibold"
          letterSpacing="normal"
          lineHeight="normal"
          link={null}
          textAlign="left"
        >
          undefined:
        </Styled(BodyCopy)>
      </Styled(Col)>
      <Styled(Col)
        colSize={
          Object {
            "large": 6,
            "medium": 4,
            "small": 3,
          }
        }
      >
        <Styled(BodyCopy)
          bodySize="one"
          className={null}
          color="primary"
          component="p"
          fontFamily="secondary"
          fontSize="fs13"
          fontWeight="semibold"
          letterSpacing="normal"
          lineHeight="normal"
          link={null}
          textAlign="right"
        >
          -1.00
        </Styled(BodyCopy)>
      </Styled(Col)>
    </Styled(Row)>
    <Styled(Row)
      className="balance-total rowMargin"
      data-locator="orderLedgerBalanceTotalLbl"
    >
      <Styled(Col)
        colSize={
          Object {
            "large": 6,
            "medium": 4,
            "small": 3,
          }
        }
      >
        <Styled(BodyCopy)
          bodySize="one"
          className={null}
          color="primary"
          component="p"
          fontFamily="secondary"
          fontSize="fs16"
          fontWeight="extrabold"
          letterSpacing="normal"
          lineHeight="normal"
          link={null}
          tag="span"
          textAlign="left"
        >
          undefined:
        </Styled(BodyCopy)>
      </Styled(Col)>
      <Styled(Col)
        colSize={
          Object {
            "large": 6,
            "medium": 4,
            "small": 3,
          }
        }
      >
        <Styled(BodyCopy)
          bodySize="one"
          className={null}
          color="primary"
          component="p"
          fontFamily="secondary"
          fontSize="fs16"
          fontWeight="extrabold"
          letterSpacing="normal"
          lineHeight="normal"
          link={null}
          tag="span"
          textAlign="right"
        >
          1.00
        </Styled(BodyCopy)>
      </Styled(Col)>
    </Styled(Row)>
    <Styled(Row)
      className="total-order-savings rowMargin"
      data-locator="orderLedgerTotalOrderSavingsLabel"
    >
      <Styled(Col)
        colSize={
          Object {
            "large": 6,
            "medium": 4,
            "small": 3,
          }
        }
      >
        <Styled(BodyCopy)
          bodySize="one"
          className={null}
          color="primary"
          component="p"
          fontFamily="secondary"
          fontSize="fs13"
          fontWeight="semibold"
          letterSpacing="normal"
          lineHeight="normal"
          link={null}
          textAlign="left"
        >
          undefined
          <Styled(ReactTooltip)
            direction="top"
            id="tool"
            minWidth="205px"
          >
            <Styled(Image)
              alt="info"
              className="circle-info-image"
              src="/static/images/info-icon.png"
            />
          </Styled(ReactTooltip)>
        </Styled(BodyCopy)>
      </Styled(Col)>
      <Styled(Col)
        colSize={
          Object {
            "large": 6,
            "medium": 4,
            "small": 3,
          }
        }
      >
        <Styled(BodyCopy)
          bodySize="one"
          className={null}
          color="primary"
          component="p"
          fontFamily="secondary"
          fontSize="fs13"
          fontWeight="semibold"
          letterSpacing="normal"
          lineHeight="normal"
          link={null}
          textAlign="right"
        >
          1.00
        </Styled(BodyCopy)>
      </Styled(Col)>
    </Styled(Row)>
  </Styled(Grid)>
  <Measure
    name="render_cart_total"
  />
</Fragment>
`;
